# docker-dev-image

./: .gitignore  Dockerfile  Makefile  bashrc.patch
.github/workflows/: docker-image.yml
workspace/: .vimrc  setup.sh
workspace/.config/: bash_aliases  vimrc
workspace/.config/SpaceVim.d/: SpaceVim.d  init.toml
workspace/.config/SpaceVim.d/autoload/: bootstrap.vim
workspace/projects/cmake-exmaple/: .gitignore  CMakeLists.txt  LICENSE  build-and-run.py  build-and-run.sh
workspace/projects/cmake-exmaple/cmake/: clang-format.cmake  cppcheck.cmake  gcov.cmake  gtest.cmake
workspace/projects/cmake-exmaple/src/: CMakeLists.txt  divider.cpp  divider.h  gcc_bug_55917.cpp
workspace/projects/cmake-exmaple/src/division/: CMakeLists.txt  division.cpp  division.h  test_division.cpp
workspace/projects/example/: Makefile  common.cpp  common.h  main.cpp  printf.patch
